--- a/src/style.css
+++ b/src/style.css
@@ -10,53 +10,78 @@ a {
   text-decoration: none;
 }
 
-#searchBar {
-  position: relative;
+#logo {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.searchContainer {
   display: flex;
   align-items: center;
-  width: 100%;
 }
 
-#searchIcon {
+.searchIcon {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.searchIcon img {
   width: 30px;
   height: 30px;
-  background-color: #35d0ba;
-  border-radius: 50%;
-  box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.4);
-  cursor: pointer;
-  transition: background 0.5s ease;
-  position: absolute;
-  right: 0;
 }
 
-/* #searchInput {
-  position: absolute;
+.searchNavbar {
+  position: fixed;
+  top: -100px;
+  left: 0;
   right: 0;
-  width: 0;
-  height: 50px;
+  padding: 25px;
+  background-color: #333;
+  transition: top 0.3s ease-in-out;
+  z-index: 50;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.searchNavbar.active {
+  top: 0;
+}
+
+.searchInputContainer {
+  position: relative;
+  width: 90%;
+  max-width: 400px;
+}
+
+.searchInput {
+  padding: 10px;
+  width: 100%;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.closeSearch {
+  position: absolute;
+  top: 50%;
+  right: 0px;
+  transform: translateY(-50%);
+  background: none;
   border: none;
-  padding: 0 20px;
+  color: #ccc;
+  font-size: 20px;
+  cursor: pointer;
+  padding: 5px;
+}
+
+.closeSearch:hover {
   color: white;
-  border-radius: 25px;
-  font-weight: bold;
-  font-family: monospace;
-  opacity: 0;
-  transition: width 0.5s ease, opacity 0.5s ease;
-} */
-
-#searchInput:focus {
-  width: 300px;
-  opacity: 1;
-  padding-left: 15px;
 }
 
-input::placeholder {
-  color: #fff;
-  opacity: 0.7;
-}
-
-#searchBar input:focus + #searchIcon {
-  left: -260px;
+#moviesContainer {
+  margin-top: 80px; /* Space for the navbar */
 }
 
 p {
@@ -108,7 +133,7 @@ header {
   cursor: pointer;
   width: 100%;
   color: white;
-  max-height: 400px;
+  max-height: 420px;
   max-width: 250px;
   margin-bottom: 20px;
   background-color: #1a1a1a;
@@ -212,7 +237,7 @@ header {
   object-fit: fill;
   width: 100%;
   height: 100%;
-  mask-image: linear-gradient(200deg, #000 5%, transparent);
+  mask-image: linear-gradient(200deg, #1a1a1a 5%, transparent);
 }
 
 .movieDetails {
@@ -240,6 +265,7 @@ header {
 }
 
 .movieAdditionalDetails {
+  margin-top: 20px;
   padding-inline: 10px;
   box-sizing: border-box;
 }
@@ -378,7 +404,7 @@ header {
   }
 }
 
-@media only screen and (min-width: 640px) {
+@media only screen and (min-width: 600px) {
   header {
     padding-block: 25px;
   }
@@ -394,7 +420,7 @@ header {
   }
 
   .movieCard img {
-    height: 70%;
+    height: 67%;
   }
 
   #noMoviesFound {
@@ -406,9 +432,15 @@ header {
   }
 }
 
+@media only screen and (min-width: 900px) {
+  #moviesContainer {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
 @media only screen and (min-width: 1080px) {
   #moviesContainer {
-    max-width: 1600px;
+    max-width: 1400px;
     margin: auto;
     grid-template-columns: repeat(5, 1fr);
     gap: 20px;
