--- a/src/style.css
+++ b/src/style.css
@@ -11,8 +11,12 @@ a {
 }
 
 #logo {
-  font-size: 24px;
-  font-weight: bold;
+  display: flex;
+  align-items: center;
+}
+#logo img {
+  width: 220px;
+  height: 60px;
 }
 
 .searchContainer {
@@ -244,9 +248,16 @@ header {
 
 .movieThumbnail .movieDetails {
   display: flex;
-  align-items: end;
-  gap: 20px;
+  flex-direction: column;
   margin-bottom: 5px;
+}
+
+.movieDetails div:first-child {
+  margin-bottom: -12px;
+}
+
+.ratingContainer {
+  padding-top: 0;
 }
 
 .movieThumbnail .movieTitle {
@@ -259,7 +270,8 @@ header {
 }
 
 .thumbnailImage {
-  object-fit: fill;
+  object-fit: cover;
+  object-position: top;
   width: 100%;
   height: 100%;
   mask-image: linear-gradient(200deg, #1a1a1a 5%, transparent);
@@ -431,13 +443,27 @@ header {
 
 @media only screen and (min-width: 600px) {
   header {
-    padding-block: 25px;
+    padding-block: 15px;
   }
 
   #moviesContainer {
     margin-top: 40px;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
+  }
+
+  .movieThumbnail .movieDetails {
+    flex-direction: row;
+    gap: 10px;
+    align-items: end;
+  }
+
+  .movieDetails div:first-child {
+    margin-bottom: 0px;
+  }
+
+  .movieDetails .movieTitle {
+    margin-top: 0;
   }
 
   .movierama {
